objects/CSD_Opportunity_Record_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeID__c</fullName>
        <label>RecordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CSD Opportunity Record Type Detail</label>
</CustomObject>